add checkout module based on spring boot

--- a/shop/src/main/resources/templates/shop.html
+++ b/shop/src/main/resources/templates/shop.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -46,7 +47,7 @@
     <footer>
         <hr/>
         <p>
-            <small>&copy; Niko Köbler</small>
+            <small>&copy; Niko Köbler | <a href="https://www.n-k.de" target="_blank">www.n-k.de</a></small>
         </p>
     </footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
