--- a/shop/src/main/resources/templates/shop.html
+++ b/shop/src/main/resources/templates/shop.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav style="background-color: #fcd611">
+        <nav>
             <img src="/smile.jpg" style="height: 70px" alt="">
             <h1>Smiling Bookshop</h1>
             <ul>
