--- a/checkout/src/main/resources/templates/checkout.html
+++ b/checkout/src/main/resources/templates/checkout.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <nav style="background-color: #fcd611">
+    <nav>
         <img src="/smile.jpg" style="height: 70px" alt="">
         <h1>Smiling Bookshop Checkout</h1>
         <ul>
