--- a/checkout/src/main/resources/templates/checkout.html
+++ b/checkout/src/main/resources/templates/checkout.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="//localhost:8081/shop">Back to shop</a></li>
             <li th:text="${username}">...username...</li>
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
     <h1><i>Ready to checkout your order!</i></h1>
