--- a/shop/src/main/resources/templates/shop.html
+++ b/shop/src/main/resources/templates/shop.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="//localhost:8084/checkout">Cart/Checkout (<span id="cartSize">{cartSize}</span>)</a></li>
                 <li>{user}</li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </nav>
         <h1><i>Make your choice from the best books ever!</i></h1>
