--- a/checkout/src/main/resources/templates/checkout.html
+++ b/checkout/src/main/resources/templates/checkout.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Smiling Bookshop Checkout</title>
     <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+    <style>
+        body {
+            --color: #118bee;
+            --color-accent: #118bee15;
+            --color-bg: #fff;
+            --color-bg-secondary: #e9e9e9;
+            --color-link: #118bee;
+            --color-secondary: #920de9;
+            --color-secondary-accent: #920de90b;
+            --color-shadow: #f4f4f4;
+            --color-table: #118bee;
+            --color-text: #000;
+            --color-text-secondary: #999;
+        }
+    </style>
 </head>
 <body>
 <header>
